# bloom-desktop

./: .env.e2e  .env.example  .eslintignore  .eslintrc.json  .gitignore  .mcp.json  .npmrc  .npmrc.example  .prettierignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  STRUCTURE.md  forge.config.ts  package-lock.json  package.json  playwright.config.ts  prisma.config.ts  pyproject.toml  requirements.txt  tailwind.config.js  test-metadata-sample.csv  vitest.config.ts  vitest.integration.config.ts  webpack.main.config.ts  webpack.plugins.ts  webpack.renderer.config.ts  webpack.rules.ts
.playwright-mcp/: page-2026-04-29T16-22-55-304Z.yml
.serena/: project.yml
docs/: CAMERA_TESTING.md  CONFIGURATION.md  DAQ_TESTING.md  DATABASE.md  E2E_TESTING.md  MANUAL_UPLOAD_TESTING.md  PACKAGED_APP_TESTING.md  PACKAGING.md  PILOT_COMPATIBILITY.md  RIG_VALIDATION_PR237.md  SCANNER_DATABASE_INTEGRATION_PLAN.md  SCANNER_TESTING.md  STREAMING_MEMORY_FIX.md
openspec/: AGENTS.md  project.md
prisma/: schema.prisma  seed.ts
python/: PYINSTALLER.md  __init__.py  ipc_handler.py  main.py  main.spec
scripts/: README.md  build-libusb-filter.cjs  build-libusb-filter.sh  build-python.js  build-webpack-dev.js  check-ipc-coverage.py  detect-schema-version.ts  ensure-python-executable.sh  fix-metadata-barcode.py  fix-metadata-filepath.py  free-port-9000.js  generate-db-fixtures.ts  reset-database.ts  seed-production.ts  stop-electron-forge.js  test-camera-manual.sh  test-dev-database.sh  test-package-database-full.sh  test-package-database.sh  test-parallel-amd.py  test-scanners-1200dpi.py  (+10 more)
(+760 files in other folders)
