[project]
name = "bloom-hardware"
version = "0.1.0"
description = "Python hardware interfaces for Bloom Desktop"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.0",
    "pypylon>=3.0.0",
    "imageio>=2.34.0",
    "nidaqmx>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pyinstaller>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python"]

[dependency-groups]
dev = []

[tool.pytest.ini_options]
testpaths = ["python"]
python_files = ["test_*.py"]
addopts = "--cov=python --cov-report=html --cov-report=term --cov-fail-under=80"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# F401: imported but unused - allow in try/except blocks for availability checks
ignore = []
per-file-ignores = { "python/main.py" = ["F401"], "python/ipc_handler.py" = ["F401"] }

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
# Ignore missing stubs for third-party hardware libraries
[[tool.mypy.overrides]]
module = ["pypylon.*", "nidaqmx.*", "ipc_handler"]
ignore_missing_imports = true
